# Proyecto_FINAL

./: CMakeLists.txt  README.md  Reporte_final.txt
src/: main.cpp
src/entidades/: Controlador.cpp  Controlador.h  Edificio.cpp  Edificio.h  Terreno.cpp  Terreno.h  Unidad.cpp  Unidad.h
src/interfaz/: UI.cpp  UI.h
src/nucleo/: Contexto.cpp  Contexto.h  Coordenada.h  Juego.cpp  Juego.h  Mapa.cpp  Mapa.h
src/sistemas/: Combate.cpp  Combate.h  Eventos.cpp  Eventos.h  Recursos.cpp  Recursos.h
src/utilidades/: Constantes.h  Persistencia.cpp  Persistencia.h  Validaciones.cpp  Validaciones.h
